tests/ui/consts/const-eval/conditional_array_execution.stderr
error[E0080]: attempt to compute `5_u32 - 6_u32`, which would overflow
  --> $DIR/conditional_array_execution.rs:3:19
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   |                   ^^^^^ evaluation of constant value failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
